deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi
  labels:
    tier: application
